# ncr-data-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  earthwave_script.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: deploy_app.yaml
rsconnect-python/: ncr_dashboard.json
tests/: etl_test.py
utils/: definitions.py  etl.py  helper_text.py  plotter.py  processor.py
www/: style.css
